# Hiyori---Your-Health-Care-Agent

./: .gitignore  Dockerfile  README.md  docker-compose.yml  env.example  pyproject.toml
.kiro/specs/aws-healthcare-migration/: design.md  requirements.md  tasks.md
config/docker/: Dockerfile  docker-compose.override.yml
config/pgadmin/: pgpass
docker/redis/: redis.conf
docs/cleanup/: POSTCHECK.md
docs/examples/: live2d_frontend_example.html
docs/security/: SECURITY_IMPROVEMENTS_REPORT.md
docs/setup/: ORGANIZATION_GUIDE.md  PROJECT_STRUCTURE.md
healthcare_ai_live2d_unified/: .env.secure  .gitignore  deploy_optimized_system.sh  env.example  requirements.txt
healthcare_ai_live2d_unified/config/alembic/: alembic.ini
healthcare_ai_live2d_unified/config/pgadmin/: servers.json
healthcare_ai_live2d_unified/deployment/: config.json  deploy.py
healthcare_ai_live2d_unified/docker/: build-and-push.ps1  build-and-push.sh
healthcare_ai_live2d_unified/docker/agent-router/: Dockerfile
healthcare_ai_live2d_unified/docker/illness-monitor/: Dockerfile
healthcare_ai_live2d_unified/docker/lambda-base/: Dockerfile  healthcheck.py  requirements.txt
healthcare_ai_live2d_unified/docker/mental-health/: Dockerfile
healthcare_ai_live2d_unified/docker/safety-guardian/: Dockerfile
healthcare_ai_live2d_unified/docker/wellness-coach/: Dockerfile
healthcare_ai_live2d_unified/docs/cleanup/: CHANGELOG.md  CLEANUP.patch  CLEANUP_PLAN.md  DEPRECATIONS.md
healthcare_ai_live2d_unified/docs/examples/: live2d_frontend_example.html  live2d_frontend_integration.js
healthcare_ai_live2d_unified/docs/guides/: realtime_data_improvements.md
healthcare_ai_live2d_unified/docs/security/: SECURITY_ASSESSMENT_REPORT.md
healthcare_ai_live2d_unified/docs/setup/: DEMO_USERS.md  PGADMIN_SETUP_GUIDE.md
healthcare_ai_live2d_unified/frontend/config/: aws-config.js
healthcare_ai_live2d_unified/frontend/s3-deployment/: cloudfront-config.json  deploy-frontend.py  deploy.ps1  deploy.sh
healthcare_ai_live2d_unified/infrastructure/: README.md  cloudformation-template.yaml  config.env.template  deploy.ps1  deploy.sh  validate-deployment.sh
healthcare_ai_live2d_unified/migration/: postgres_to_dynamodb.py  requirements.txt
healthcare_ai_live2d_unified/migrations/versions/: 704dbb1ea8cf_initial_database_schema.py
healthcare_ai_live2d_unified/monitoring/: cloudwatch_setup.py
healthcare_ai_live2d_unified/prompts/agents/illness_monitor/: en.txt  zh-hk.txt
healthcare_ai_live2d_unified/prompts/agents/safety_guardian/: en.txt
healthcare_ai_live2d_unified/prompts/system/: safety_specialist.txt
healthcare_ai_live2d_unified/scripts/: cost_analysis.py  deploy_and_test.py  run_final_tests.ps1  run_final_tests.sh
healthcare_ai_live2d_unified/scripts/deployment/: quick-setup.sh  start-all.sh
healthcare_ai_live2d_unified/scripts/pgadmin/: security_setup.py
healthcare_ai_live2d_unified/src/agents/: README.md  base_agent.py  db_session_manager.py  emotion_mapper.py  examples.py  gesture_library.py  mental_health.py  safety_guardian.py
healthcare_ai_live2d_unified/src/ai/: ai_service.py  cost_optimizer.py  model_manager.py  openrouter_client.py
healthcare_ai_live2d_unified/src/aws/: __init__.py  bedrock_client.py  config_manager.py  cost_monitor.py  dynamodb_client.py  dynamodb_schemas.py  lambda_config_optimizer.py  lambda_layer_config.py  lambda_optimizer.py  performance_monitor.py
healthcare_ai_live2d_unified/src/core/: api_security.py  security.py  security_middleware.py  security_monitor.py
healthcare_ai_live2d_unified/src/data/processors/: approval_workflow.py  file_processor.py
healthcare_ai_live2d_unified/src/database/: connection.py
healthcare_ai_live2d_unified/src/database/repositories/: base_repository.py
healthcare_ai_live2d_unified/src/lambda/agent_router/: DEPLOYMENT.md  README.md  deploy.py  handler.py  integration_test.py  (+2 more)
healthcare_ai_live2d_unified/tests/: README_FINAL_TESTING.md  final_integration_test.py  test_framework.py
healthcare_ai_live2d_unified/tools/: chat_client.py  web_chat.html
migrations/: env.py
prompts/agents/mental_health/: en.txt  zh-hk.txt
prompts/agents/wellness_coach/: en.txt
prompts/system/: base_system.txt  cultural_context.txt
scripts/deployment/: deploy-with-auto-setup.sh
scripts/maintenance/: restore-demo.sh
scripts/pgadmin/: backup_automation.py  performance_monitor.py
scripts/setup/: setup_api_key.py
sql/pgadmin_queries/: common_operations.sql
src/: config.py  main.py
src/agents/: __init__.py  context_manager.py  conversation_models.py  illness_monitor.py  orchestrator.py  wellness_coach.py
src/ai/: README.md
src/ai/examples/: agent_integration.py
src/ai/providers/: aws_bedrock.py
src/core/: background_tasks.py  exceptions.py  logging.py  security_events.py  validators.py
src/data/: pipeline.py
src/data/processors/: quality_scorer.py
src/data/storage/: cache_manager.py  hk_data_repository.py
src/database/: health_profile_models.py  models_comprehensive.py  models_hk_data.py
src/database/repositories/: hk_data_repository.py  user_repository.py
src/integrations/: live2d_client.py
src/web/: middleware.py
src/web/admin/: routes.py
src/web/auth/: dependencies.py  middleware.py  schemas.py
src/web/live2d/: routes.py
src/web/middleware/: rate_limiter.py  security_advanced.py
src/web/websockets/: chat.py
(+55 files in other folders)
